--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = flaskr
+name = fantasy_football_site
 version = 1.0.0
 url = https://flask.palletsprojects.com/tutorial/
 license = BSD-3-Clause
@@ -25,4 +25,4 @@ testpaths = tests
 [coverage:run]
 branch = True
 source =
-    flaskr
+    ffs
