--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+certifi==2021.5.30
+chardet==4.0.0
 click==8.0.1
+dominate==2.6.0
+espn-api==0.16.1
 Flask==2.0.1
+Flask-Bootstrap==3.3.7.1
+idna==2.10
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+numpy==1.17.5
+pandas==0.25.3
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+pytz==2021.1
+requests==2.25.1
+six==1.16.0
+urllib3==1.26.5
+visitor==0.1.3
 Werkzeug==2.0.1
